chore: shows headers always, prevent scroll jump

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -17,6 +17,8 @@ $wrapper-side-padding: clamp(10px, calc(5.0px + 1.6vw), 30px)
 body
     font-family: "Open Sans"
     background-color: $main-bg-color
+    // Prevent page's horizontal jump when scroll starting.
+    min-height: 101vh
 
 .todo-list
     margin-top: 60px
